gramatica.txt
programa:= 
	':' 'DECLARACOES' listaDeclaracoes ':' 'ALGORITMO' listaComandos; SR

listaDeclaracoes : 
	declaracao listaDeclaracoes | 
	declaracao; SR

declaracao:= 
	VARIAVEL ':' tipoVar; SR

tipoVar:= 
	'INTEIRO' | 
	'REAL';
    
expressaoAritmetica:= 
	termoAritmetico expressaoAritmetica';

expressaoAritmetica':= 
	'+' termoAritmetico expressaoAritmetica' | 
	'-' termoAritmetico expressaoAritmetica' | 
	ε;  

termoAritmetico:= 
	fatorAritmetico termoAritmetico';

termoAritmetico':= 
	'*' fatorAritmetico termoAritmetico' | 
	'/' fatorAritmetico termoAritmetico' | 
	ε; 

fatorAritmetico:= 
	NUMINT | 
	NUMREAL | 
	VARIAVEL | 
	LEFT_PAR expressaoAritmetica RIGHT_PAR

expressaoRelacional:= 
	termoRelacional expressaoRelacional';

expressaoRelacional':= 
	operadorBooleano termoRelacional expressaoRelacional' | 
	ε; 

termoRelacional:= 
	expressaoAritmetica OP_REL expressaoAritmetica | 
	LEFT_PAR expressaoRelacional RIGHT_PAR;

operadorBooleano:= 
	'E' | 
	'OU';

listaComandos:= 
	comando listaComandos | 
	comando;

comando:= 
	comandoAtribuicao | 
	comandoEntrada | 
	comandoSaida | 
	comandoCondicao | 
	comandoRepeticao | 
	subAlgoritmo;

comandoAtribuicao:= 
	'VARIAVEL' = expressaoAritmetica;

comandoEntrada:= 
	'LER' VARIAVEL;

comandoSaida:= 
	'IMPRIMIR' LEFT_PAR (VARIAVEL | CADEIA) RIGHT_PAR;

comandoCondicao:= 
	'SE' expressaoRelacional 'ENTAO' comando | 
	'SE' expressaoRelacional 'ENTAO' comando 'SENAO' comando;

comandoRepeticao:= 
	'ENQUANTO' expressaoRelacional comando;

subAlgoritmo:= 
	'INICIO' listaComandos 'FIM';
